force-app/main/default/objects/Case/fields/Guardian_Parent_Information__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Parent_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guardian/Parent Information</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>