force-app/main/default/objects/Case/recordTypes/Abuse_Report.recordType-meta.xml
<RecordType>
    <fullName>Abuse_Report</fullName>
    <active>true</active>
    <businessProcess>Risk Assessment</businessProcess>
    <label>Abuse Report</label>
</RecordType>