force-app/main/default/objects/Case/recordTypes/General_Child_Welfare_Case.recordType-meta.xml
<RecordType>
    <fullName>General_Child_Welfare_Case</fullName>
    <active>true</active>
    <businessProcess>Comprehensive Assessment</businessProcess>
    <label>General Child Welfare Case</label>
</RecordType>