force-app/main/default/objects/Case/recordTypes/General_Incident_Report.recordType-meta.xml
<RecordType>
    <fullName>General_Incident_Report</fullName>
    <active>true</active>
    <businessProcess>Incident Review</businessProcess>
    <label>General Incident Report</label>
</RecordType>