force-app/main/default/objects/Case/recordTypes/Neglect_Report.recordType-meta.xml
<RecordType>
    <fullName>Neglect_Report</fullName>
    <active>true</active>
    <businessProcess>Safety Assessment</businessProcess>
    <label>Neglect Report</label>
</RecordType>