force-app/main/default/objects/Case/recordTypes/Safety_Concern_Report.recordType-meta.xml
<RecordType>
    <fullName>Safety_Concern_Report</fullName>
    <active>true</active>
    <businessProcess>Safety Assessment</businessProcess>
    <label>Safety Concern Report</label>
</RecordType>